objects/OF_CaseOrderStateModelCS__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>OF_EsitoOrder__c</fullName>
        <label>Esito order</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_FaseDiCreazione__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FaseDiCreazione</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_RecordTypeCaseAttivo__c</fullName>
        <label>Record Type Case Attivo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_RecordTypeCasePassivo__c</fullName>
        <label>Record Type Case Passivo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_RecordTypeOrder__c</fullName>
        <label>Record Type Order</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_StatoCase__c</fullName>
        <label>Stato Case</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_StatoOrder__c</fullName>
        <label>Stato Order</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_TipologiaFlusso__c</fullName>
        <label>Tipologia Flusso</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_RecordTypeCaseOrdineEventoTemporaneo__c</fullName>
        <label>Record Type Case Ordine Evento Temporane</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_RecordTypeCaseOrdineFiberLease__c</fullName>
        <label>Record Type Case Ordine Fiber Lease</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_RecordTypeCaseOrdineFiberLink__c</fullName>
        <label>Record Type Case Ordine Fiber Link</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_RecordTypeCaseOrdineIRU__c</fullName>
        <label>Record Type Case Ordine IRU</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_RecordTypeCaseOrdineP2PAttiva__c</fullName>
        <label>Record Type Case Ordine P2P Attiva</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_RecordTypeCaseOrdineP2PELine__c</fullName>
        <label>Record Type Case Ordine P2P ELine</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_RecordTypeCaseOrdineP2P__c</fullName>
        <label>Record Type Case Ordine P2P</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CaseOrderStateModelCS</label>
</CustomObject>